# SSDD_Omni

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  FIXES_SUMMARY.md  MULTIVIEW_ARCHITECTURE.md  QUICK_REFERENCE.md  QUICK_START_MULTIVIEW.md  README.md  TRAINING_EVAL_FLOW.md  TRAINING_GUIDE.md  VIEW_ENCODING_GUIDE.md  VIEW_ENCODING_SUMMARY.md  config.yaml  demo.ipynb  demo.py  environment.yml  pyproject.toml  test_dataset.py  test_equi_integration.py
config/: SpiderEye.yaml  SpiderVideo.yaml  eval_test.yaml  main.yaml
config/blocks/: gan.yaml
scripts/: check_images.py  collect_images.py
ssdd/: SpiderTask_MultiView.py  dataset_equi.py  main_multiview.py  tasks.py
ssdd/log/: loggers.py  metrics.py  visualize.py
ssdd/models/blocks/: normalization.py  transformer_blocks.py
ssdd/models/ssdd/: ssdd.py  ssdd_multiview.py
ssdd/mutils/: train_utils.py
tools/: divide_equi_dataset.py  test_dataset.py
utils/: EquiDataset.py
